# midi-parser-synthesizer

./: CMakeLists.txt  FilePathSanitizer.cpp  FilePathSanitizer.h  MidiFile.cpp  MidiFile.h  MidiParser.cpp  MidiParser.h  MidiSequencer.cpp  MidiSequencer.h  Track.cpp  Track.h  TrackSequence.cpp  TrackSequence.h  main.cpp
Containers/: File.cpp  File.h  Track.cpp  Track.h  TrackSequence.cpp  TrackSequence.h
EventTypeEnums/: ContinuousControllers.h  EventType.h  MetaEventType.h  MidiEventType.h  SysexEventType.h
Parser/: MidiParser.cpp  MidiParser.h
Sequencer/: ActiveNote.h  MidiSequencer.cpp  MidiSequencer.h  TrackIndices.h
Synthesizer/: VoiceManager.cpp  VoiceManager.h
Synthesizer/Envelopes/: Envelope.cpp  Envelope.h
Synthesizer/Envelopes/Base Implementations/: ADSREnvelope.cpp  ADSREnvelope.h  EnvelopeState.h
Synthesizer/Envelopes/Base Implementations/ADSR/: ADSREnvelope.cpp  ADSREnvelope.h  ADSREnvelopeState.h
Synthesizer/Envelopes/Decorators/: EnvelopeDecorator.cpp  EnvelopeDecorator.h  TremoloEnvelope.cpp  TremoloEnvelope.h  VibratoEnvelope.cpp  VibratoEnvelope.h
Synthesizer/Oscillators/: Oscillator.cpp  Oscillator.h  SawtoothOscillator.cpp  SawtoothOscillator.h  SineOscillator.cpp  SineOscillator.h  SquareOscillator.cpp  SquareOscillator.h
Synthesizer/Oscillators/Base Implementations/: Oscillator.cpp  Oscillator.h  SawtoothOscillator.cpp  SawtoothOscillator.h  SineOscillator.cpp  SineOscillator.h  SquareOscillator.cpp  SquareOscillator.h
Synthesizer/Oscillators/Decorators/: OscillatorDecorator.cpp  OscillatorDecorator.h  VibratoOscillator.cpp  VibratoOscillator.h
Synthesizer/Voices/: Voice.cpp  Voice.h
Testing files/: joe hisaishi - the merry go round of life.mid  manaka kataoka, yasuaki iwata - rito village (day).mid  s. rachmaninoff - sonata g minor op19.mid  test10.mid  test11.mid  test2.mid  undertale - burgertrucking.mid  undertale - it's raining somewhere else.mid
TrackEvents/: MetaEvent.h  MidiEvent.h  Note.h  SysexEvent.h
